force-app/main/default/objects/Clients__c/Clients__c.object-meta.xml
<CustomObject>
    <label>Clients</label>
    <nameField>
        <label>Clients Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>