force-app/main/default/objects/Clients__c/fields/Active_status__c.field-meta.xml
<CustomField>
    <fullName>Active_status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active status</label>
    <type>Checkbox</type>
</CustomField>