force-app/main/default/objects/Clients__c/fields/Name_of_the_client__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_client__c</fullName>
    <label>Name of the client</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>