force-app/main/default/objects/Clients__c/validationRules/Status_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c, &apos;close&apos;)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Status not be close</errorMessage>
</ValidationRule>