force-app/main/default/objects/Clients__c/validationRules/validate_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>validate_Active</fullName>
    <active>true</active>
    <errorConditionFormula>Active_status__c = FALSE</errorConditionFormula>
    <errorDisplayField>Active_status__c</errorDisplayField>
    <errorMessage>active cannot be false</errorMessage>
</ValidationRule>